--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="rate_us_underlined"><u>Rate us in the Play Store</u></string>
     <string name="follow_us">Follow us:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
+    <string name="add_apps">Add application launchers</string>
 
     <!-- Settings -->
     <string name="settings">Settings</string>
