--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Simple App Launcher</string>
+    <string name="delete">Delete</string>
 
     <!-- About -->
     <string name="about">About</string>
