show an Edit button if there is only 1 item selected

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Simple App Launcher</string>
     <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
 
     <!-- About -->
     <string name="about">About</string>
