display a dialog for renaming launcher

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Simple App Launcher</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+    <string name="rename_launcher">Rename launcher</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 
     <!-- About -->
     <string name="about">About</string>
