--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="rename_launcher">Rename launcher</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="invalid_characters">New launcher name contains invalid characters</string>
 
     <!-- About -->
     <string name="about">About</string>
