--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,17 @@
     <string name="enter_launcher_name">Please enter a launcher name</string>
     <string name="unknown_error">An unknown error occurred</string>
 
+    <!-- Apps -->
+    <string name="calculator">Calculator</string>
+    <string name="calendar">Calendar</string>
+    <string name="camera">Camera</string>
+    <string name="draw">Draw</string>
+    <string name="file_manager">File Manager</string>
+    <string name="flashlight">Flashlight</string>
+    <string name="gallery">Gallery</string>
+    <string name="music_player">Music Player</string>
+    <string name="notes">Notes</string>
+
     <!-- About -->
     <string name="about">About</string>
     <string name="website">More simple apps and source code at:\nhttp://simplemobiletools.com</string>
