--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">Simple App Launcher</string>
     <string name="app_launcher_name">Lançador de aplicações</string>
-    <string name="delete">Eliminar</string>
+    <string name="delete">Apagar</string>
     <string name="edit">Editar</string>
     <string name="rename_launcher">Renomear lançador</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancelar</string>
-    <string name="enter_launcher_name">Por favor introduza um nome para o lançador</string>
+    <string name="enter_launcher_name">Por favor digite um nome para o lançador</string>
     <string name="unknown_error">Ocorreu um erro desconhecido</string>
 
     <!-- Apps -->
@@ -17,20 +17,21 @@
     <string name="file_manager">Gestor de ficheiros</string>
     <string name="flashlight">Lanterna</string>
     <string name="gallery">Galeria</string>
-    <string name="music_player">Reprodutor de música</string>
+    <string name="music_player">Reprodutor de músicas</string>
     <string name="notes">Notas</string>
 
     <!-- About -->
-    <string name="about">Sobre</string>
-    <string name="website">Mais aplicações simples e código de fonte em:\nhttp://simplemobiletools.com</string>
+    <string name="about">Acerca</string>
+    <string name="website">Mais aplicações Simple e código fonte em:\nhttp://simplemobiletools.com</string>
     <string name="email_label">Envie os seus comentários ou sugestões para:</string>
+	<string name="email" translatable="false">hello@simplemobiletools.com</string>
     <string name="third_party_licences_underlined"><u>Licenças de terceiros</u></string>
     <string name="invite_friends_underlined"><u>Convidar amigos</u></string>
-    <string name="share_text">Olá, experimente %1$s em %2$s</string>
+    <string name="share_text">Olá, experimenta %1$s em %2$s</string>
     <string name="invite_via">Convidar via</string>
-    <string name="rate_us_underlined"><u>Classifique-nos na Play Store</u></string>
+    <string name="rate_us_underlined"><u>Avalie-nos na Play Store</u></string>
     <string name="follow_us">Siga-nos:</string>
-    <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
+    <string name="copyright">V %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="add_apps">Adicionar lançadores de aplicações</string>
 
     <!-- Settings -->
@@ -41,5 +42,9 @@
     <string name="notice">Esta aplicação usa as seguintes bibliotecas de terceiros para facilitar a minha vida. Obrigado.</string>
     <string name="third_party_licences">Licenças de terceiros</string>
     <string name="kotlin_title"><u>Kotlin (linguagem de programação)</u></string>
-    <string name="multiselect_title"><u>RecyclerView MultiSelect (selecionar lançadores)</u></string>
+    <string name="kotlin_text" translatable="false">Copyright 2010 - 2016 JetBrains s.r.o.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
+    <string name="kotlin_url" translatable="false">https://github.com/JetBrains/kotlin</string>
+    <string name="multiselect_title"><u>RecyclerView MultiSelect (marcador de lançadores)</u></string>
+    <string name="multiselect_text" translatable="false">The MIT License (MIT)\n\nCopyright (c) 2014 Big Nerd Ranch\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: \n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
+    <string name="multiselect_url" translatable="false">https://github.com/bignerdranch/recyclerview-multiselect</string>
 </resources>
