--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+﻿<resources>
     <string name="app_name">シンプル アプリ ランチャー</string>
     <string name="app_launcher_name">アプリ ランチャー</string>
     <string name="delete">削除</string>
@@ -27,7 +27,7 @@
     <string name="third_party_licences_underlined"><u>サードパーティー ライセンス</u></string>
     <string name="invite_friends_underlined"><u>友達を招待</u></string>
     <string name="share_text">%2$s で %1$s を確認してください </string>
-    <string name="invite_via">...で招待</string>
+    <string name="invite_via">招待...</string>
     <string name="rate_us_underlined"><u>Play ストアで評価してください</u></string>
     <string name="follow_us">フォローしてください:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
@@ -44,13 +44,13 @@
     <string name="multiselect_title"><u>RecyclerView MultiSelect (マーキング ランチャー)</u></string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
-    <string name="app_short_description">A simple holder for your favourite app launchers.</string>
+    <string name="app_short_description">お気に入りのアプリランチャーのためのシンプルなホルダー。</string>
     <string name="app_long_description">
-        You can easily add any app launcher, so you won\'t ever again have to swipe through useles apps to find the one you need. You can also rename the launchers as you wish. It is not a real launcher replacing your home screen, just a holder for your favourite apps.
+        アプリランチャーを簡単に追加できるので、必要なものを見つけるために無駄なアプリをまたスワイプする必要はありません。 ランチャーの名前を変更することもできます。 単なるお気に入りのアプリのホルダーで、ホーム画面を置き換えるものではありません。
 
 
-        Contains no ads or unnecessary permissions. It is fully opensource, provides a Dark theme too.
+        広告や不要なアクセス許可は含まれていません。 完全にオープンソースで、ダークテーマも提供しています。
 
-        This app is just one piece of a bigger series of apps. You can find the rest of them at http://www.simplemobiletools.com
+        このアプリは、大きな一連のアプリの一つです。 他のアプリは http://www.simplemobiletools.com で見つけることができます
     </string>
 </resources>
