--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <string name="app_short_description">A simple holder for your favourite app launchers.</string>
     <string name="app_long_description">
-        You can easily add any app launcher, so you won\'t ever again have to swipe through useles apps to find the one you need. You can also rename the launchers as you wish. It is not a real launcher replacing your home screen, just a holder for your favourite apps.
+        You can easily add any app launcher, so you won\'t ever again have to swipe through useless apps to find the one you need. You can also rename the launchers as you wish. It is not a real launcher replacing your home screen, just a holder for your favourite apps.
 
 
         Contains no ads or unnecessary permissions. It is fully opensource, provides a Dark theme too.
