--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -3,21 +3,21 @@
     <string name="app_launcher_name">App Launcher</string>
     <string name="delete">Löschen</string>
     <string name="edit">Bearbeiten</string>
-    <string name="rename_launcher">Starter umbenennen</string>
+    <string name="rename_launcher">Verknüpfung umbenennen</string>
     <string name="ok">OK</string>
     <string name="cancel">Abbrechen</string>
-    <string name="enter_launcher_name">Bitte gib einen Namen für den Starter ein</string>
+    <string name="enter_launcher_name">Bitte gib einen Namen für die Verknüpfung ein</string>
     <string name="unknown_error">Ein unbekannter Fehler ist aufgetreten</string>
 
     <!-- Apps -->
-    <string name="calculator">Taschenrechner</string>
+    <string name="calculator">Rechner</string>
     <string name="calendar">Kalender</string>
     <string name="camera">Kamera</string>
     <string name="draw">Zeichenblock</string>
     <string name="file_manager">Dateimanager</string>
     <string name="flashlight">Taschenlampe</string>
     <string name="gallery">Galerie</string>
-    <string name="music_player">Musikspieler</string>
+    <string name="music_player">Musikplayer</string>
     <string name="notes">Notizblock</string>
 
     <!-- About -->
@@ -31,7 +31,7 @@
     <string name="rate_us_underlined"><u>Bewerte uns im Play Store</u></string>
     <string name="follow_us">Folge uns:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
-    <string name="add_apps">Füge Anwendungsstarter hinzu</string>
+    <string name="add_apps">Apps hinzufügen</string>
 
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
@@ -44,13 +44,12 @@
     <string name="multiselect_title"><u>RecyclerView MultiSelect (Marking Launchers)</u></string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
-    <string name="app_short_description">A simple holder for your favourite app launchers.</string>
+    <string name="app_short_description">Eine schlichte App um all deine liebsten Apps an einem Platz zu vereinen.</string>
     <string name="app_long_description">
-        You can easily add any app launcher, so you won\'t ever again have to swipe through useles apps to find the one you need. You can also rename the launchers as you wish. It is not a real launcher replacing your home screen, just a holder for your favourite apps.
+        Du kannst ganz einfach jede App hinzufügen, damit du nie wieder zwischen zahlreichen Apps suchen musst, um eine bestimmte zu finden. Du kannst die Verknüpfungen auch nach deinen Wünschen umbenennen. Diese App ist kein richtiger Launcher, der deinen Homescreen ersetzt - nur ein Platz für Verknüpfungen deiner Lieblingsapps.
 
+        Beinhaltet keine Werbung und benötigt keine unnötigen Berechtigungen. Die App ist komplett Open Source und bietet nach Wunsch anpassbare Farben.
 
-        Contains no ads or unnecessary permissions. It is fully opensource, provides a Dark theme too.
-
-        This app is just one piece of a bigger series of apps. You can find the rest of them at http://www.simplemobiletools.com
+        Diese App ist nur eine von vielen unserer Apps. Du kannst alle anderen hier finden: http://www.simplemobiletools.com
     </string>
 </resources>
