--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,13 +1,7 @@
 <resources>
     <string name="app_name">Schlichter AppLauncher</string>
     <string name="app_launcher_name">App Launcher</string>
-    <string name="delete">Löschen</string>
-    <string name="edit">Bearbeiten</string>
-    <string name="rename_launcher">Verknüpfung umbenennen</string>
-    <string name="ok">OK</string>
-    <string name="cancel">Abbrechen</string>
     <string name="enter_launcher_name">Bitte gib einen Namen für die Verknüpfung ein</string>
-    <string name="unknown_error">Ein unbekannter Fehler ist aufgetreten</string>
 
     <!-- Apps -->
     <string name="calculator">Rechner</string>
@@ -20,36 +14,19 @@
     <string name="music_player">Musikplayer</string>
     <string name="notes">Notizblock</string>
 
-    <!-- About -->
-    <string name="about">Über</string>
-    <string name="website">Weitere Apps und Quellcode findest du auf:\nhttp://simplemobiletools.com</string>
-    <string name="email_label">Sende Vorschläge und Feedback an:</string>
-    <string name="third_party_licences_underlined"><u>Drittanbieterlizenzen</u></string>
-    <string name="invite_friends_underlined"><u>Lade Freunde ein</u></string>
-    <string name="share_text">Hey, wirf mal einen Blick auf %1$s: %2$s</string>
-    <string name="invite_via">Einladen via</string>
-    <string name="rate_us_underlined"><u>Bewerte uns im Play Store</u></string>
-    <string name="follow_us">Folge uns:</string>
-    <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
-    <string name="add_apps">Apps hinzufügen</string>
-
-    <!-- Settings -->
-    <string name="settings">Einstellungen</string>
-    <string name="dark_theme">Dunkles Design</string>
-
-    <!-- License -->
-    <string name="notice">Diese App nutzt die folgenden Drittanbieterbibliotheken, die mein Leben einfacher machen. Danke.</string>
-    <string name="third_party_licences">Drittanbieterlizenzen</string>
-    <string name="kotlin_title"><u>Kotlin (Programmiersprache)</u></string>
-    <string name="multiselect_title"><u>RecyclerView MultiSelect (Marking Launchers)</u></string>
-
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
+    <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Eine schlichte App um all deine liebsten Apps an einem Platz zu vereinen.</string>
     <string name="app_long_description">
         Du kannst ganz einfach jede App hinzufügen, damit du nie wieder zwischen zahlreichen Apps suchen musst, um eine bestimmte zu finden. Du kannst die Verknüpfungen auch nach deinen Wünschen umbenennen. Diese App ist kein richtiger Launcher, der deinen Homescreen ersetzt - nur ein Platz für Verknüpfungen deiner Lieblingsapps.
 
-        Beinhaltet keine Werbung und benötigt keine unnötigen Berechtigungen. Die App ist komplett Open Source und bietet nach Wunsch anpassbare Farben.
+        Beinhaltet keine Werbung oder unnötigen Berechtigungen. Sie ist komplett Open Source, verwendete Farben sind anpassbar.
 
-        Diese App ist nur eine von vielen unserer Apps. Du kannst alle anderen hier finden: http://www.simplemobiletools.com
+        Diese App ist nur eine aus einer größeren Serie von schlichten Apps. Der Rest davon findet sich auf http://www.simplemobiletools.com
     </string>
+
+    <!--
+        Haven't found some strings? There's more at
+        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
+    -->
 </resources>
