--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,13 +1,7 @@
 <resources>
     <string name="app_name">Simple App Launcher</string>
     <string name="app_launcher_name">Lanzador de aplicaciones</string>
-    <string name="delete">Eliminar</string>
-    <string name="edit">Editar</string>
-    <string name="rename_launcher">Renombrar lanzador</string>
-    <string name="ok">Ok</string>
-    <string name="cancel">Cancelar</string>
     <string name="enter_launcher_name">Por favor, introduzca un nombre para el lanzador</string>
-    <string name="unknown_error">Ha ocurrido un error inesperado</string>
 
     <!-- Apps -->
     <string name="calculator">Calculadora</string>
@@ -20,37 +14,19 @@
     <string name="music_player">Reproductor de música</string>
     <string name="notes">Notas</string>
 
-    <!-- About -->
-    <string name="about">Acerca de Simple App Launcher</string>
-    <string name="website">Más aplicaciones simples y su código fuente en:\nhttp://simplemobiletools.com</string>
-    <string name="email_label">Envíe sus comentarios y sugerencias a:</string>
-    <string name="third_party_licences_underlined"><u>Licencias de terceros</u></string>
-    <string name="invite_friends_underlined"><u>Invitar a amigos</u></string>
-    <string name="share_text">Hola, venga y échele un vistazo a %1$s en %2$s</string>
-    <string name="invite_via">Invitar vía</string>
-    <string name="rate_us_underlined"><u>Evalúenos en Google Play Store</u></string>
-    <string name="follow_us">Síganos:</string>
-    <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
-    <string name="add_apps">Añada lanzadores de aplicaciones</string>
-
-    <!-- Settings -->
-    <string name="settings">Opciones</string>
-    <string name="dark_theme">Tema oscuro</string>
-
-    <!-- License -->
-    <string name="notice">Esta aplicación usa las siguientes librerías de terceros para hacerme la vida más fácil. Gracias.</string>
-    <string name="third_party_licences">Licencias de terceros</string>
-    <string name="kotlin_title"><u>Kotlin (Lenguaje de programación)</u></string>
-    <string name="multiselect_title"><u>RecyclerView MultiSelect (Marcador de lanzadores)</u></string>
-
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
+    <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Un simple contenedor para sus aplicaciones favoritas.</string>
     <string name="app_long_description">
         Usted puede fácilmente añadir cualquier lanzador de aplicación, no necesitará nunca más desplazarse entre aplicaciones poco útiles para encontrar la que realmente necesita. También puede renombrar los lanzadores como usted desee. No es un lanzador que sustituya a su escritorio, simplemente es un contenedor para sus aplicaciones favoritas.
 
+        No contiene publicidad ni permisos innecesarios. Es totalmente libre, proporciona colores personalizables.
 
-        No contiene anuncios ni permisos innecesarios. Es completamente OpenSource y además provee un tema oscuro.
-
-        Esta aplicación es tan solo una pequeña parte de una serie de aplicaciones. Puede encontrar el resto en http://www.simplemobiletools.com
+        Esta aplicación es solamente una pieza de una serie más grande de aplicaciones. Puede encontrar el resto en http://www.simplemobiletools.com
     </string>
+
+    <!--
+        Haven't found some strings? There's more at
+        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
+    -->
 </resources>
