--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,13 +1,7 @@
 ﻿<resources>
     <string name="app_name">シンプル アプリ ランチャー</string>
     <string name="app_launcher_name">アプリ ランチャー</string>
-    <string name="delete">削除</string>
-    <string name="edit">編集</string>
-    <string name="rename_launcher">ランチャーの名前を変更</string>
-    <string name="ok">OK</string>
-    <string name="cancel">キャンセル</string>
     <string name="enter_launcher_name">ランチャーの名前を入力してください</string>
-    <string name="unknown_error">不明なエラーが発生しました</string>
 
     <!-- Apps -->
     <string name="calculator">電卓</string>
@@ -20,37 +14,19 @@
     <string name="music_player">ミュージック プレイヤー</string>
     <string name="notes">メモ</string>
 
-    <!-- About -->
-    <string name="about">アプリについて</string>
-    <string name="website">もっとシンプルなアプリとソースコードは:\nhttp://simplemobiletools.com</string>
-    <string name="email_label">ご意見やご提案をお送りください:</string>
-    <string name="third_party_licences_underlined"><u>サードパーティー ライセンス</u></string>
-    <string name="invite_friends_underlined"><u>友達を招待</u></string>
-    <string name="share_text">%2$s で %1$s を確認してください </string>
-    <string name="invite_via">招待...</string>
-    <string name="rate_us_underlined"><u>Play ストアで評価してください</u></string>
-    <string name="follow_us">フォローしてください:</string>
-    <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
-    <string name="add_apps">アプリケーション ランチャーを追加</string>
-
-    <!-- Settings -->
-    <string name="settings">設定</string>
-    <string name="dark_theme">ダークテーマ</string>
-
-    <!-- License -->
-    <string name="notice">このアプリは、私の暮らしにゆとりを持たせるために、次のサードパーティのライブラリーを使用しています。 ありがとうございます。</string>
-    <string name="third_party_licences">サードパーティー ライセンス</string>
-    <string name="kotlin_title"><u>Kotlin (プログラミング言語)</u></string>
-    <string name="multiselect_title"><u>RecyclerView MultiSelect (マーキング ランチャー)</u></string>
-
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
+    <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">お気に入りのアプリランチャーのためのシンプルなホルダー。</string>
     <string name="app_long_description">
         アプリランチャーを簡単に追加できるので、必要なものを見つけるために無駄なアプリをまたスワイプする必要はありません。 ランチャーの名前を変更することもできます。 単なるお気に入りのアプリのホルダーで、ホーム画面を置き換えるものではありません。
-
 
         広告や不要なアクセス許可は含まれていません。 完全にオープンソースで、ダークテーマも提供しています。
 
         このアプリは、大きな一連のアプリの一つです。 他のアプリは http://www.simplemobiletools.com で見つけることができます
     </string>
+
+    <!--
+        Haven't found some strings? There's more at
+        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
+    -->
 </resources>
