--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,13 +1,7 @@
 <resources>
     <string name="app_name">Simple App Launcher</string>
     <string name="app_launcher_name">Lançador de aplicações</string>
-    <string name="delete">Apagar</string>
-    <string name="edit">Editar</string>
-    <string name="rename_launcher">Renomear lançador</string>
-    <string name="ok">OK</string>
-    <string name="cancel">Cancelar</string>
     <string name="enter_launcher_name">Por favor digite um nome para o lançador</string>
-    <string name="unknown_error">Ocorreu um erro desconhecido</string>
 
     <!-- Apps -->
     <string name="calculator">Calculadora</string>
@@ -20,37 +14,19 @@
     <string name="music_player">Reprodutor de músicas</string>
     <string name="notes">Notas</string>
 
-    <!-- About -->
-    <string name="about">Acerca</string>
-    <string name="website">Mais aplicações Simple e código fonte em:\nhttp://simplemobiletools.com</string>
-    <string name="email_label">Envie os seus comentários ou sugestões para:</string>
-    <string name="third_party_licences_underlined"><u>Licenças de terceiros</u></string>
-    <string name="invite_friends_underlined"><u>Convidar amigos</u></string>
-    <string name="share_text">Olá, experimenta %1$s em %2$s</string>
-    <string name="invite_via">Convidar via</string>
-    <string name="rate_us_underlined"><u>Avalie-nos na Play Store</u></string>
-    <string name="follow_us">Siga-nos:</string>
-    <string name="copyright">V %1$s\nCopyright © Simple Mobile Tools %2$d</string>
-    <string name="add_apps">Adicionar lançadores de aplicações</string>
-
-    <!-- Settings -->
-    <string name="settings">Definições</string>
-    <string name="dark_theme">Tema escuro</string>
-
-    <!-- License -->
-    <string name="notice">Esta aplicação usa as seguintes bibliotecas de terceiros para facilitar a minha vida. Obrigado.</string>
-    <string name="third_party_licences">Licenças de terceiros</string>
-    <string name="kotlin_title"><u>Kotlin (linguagem de programação)</u></string>
-    <string name="multiselect_title"><u>RecyclerView MultiSelect (marcador de lançadores)</u></string>
-
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
+    <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Uma pasta para guardar lançadores de aplicações.</string>
     <string name="app_long_description">
         Pode adicionar qualquer lançador, de modo a que não seja necessário procurar por todas as aplicações instaladas no seu sistema. Também pode renomear os lançadores ao seu gosto. Esta aplicação não é um \'launcher\', mas sim um local para você guardar as suas aplicações preferidas.
-
 
         Não contém anúncios nem permissões desnecessárias. Disponibiliza um tema escuro e é totalmente \'open source\'.
 
         Esta aplicação é apenas parte de um conjunto mais vasto de aplicações. Saiba mais em http://www.simplemobiletools.com
     </string>
+
+    <!--
+        Haven't found some strings? There's more at
+        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
+    -->
 </resources>
