--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -13,6 +13,7 @@
     <string name="gallery">Galería</string>
     <string name="music_player">Reproductor de música</string>
     <string name="notes">Notas</string>
+    <string name="thank_you">Thank You</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
