Update DE Play Store description

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -18,12 +18,12 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Eine schlichte App um all deine liebsten Apps an einem Platz zu vereinen.</string>
+    <string name="app_short_description">Eine schlichte App um all deine Lieblingsapps an einem Platz zu vereinen.</string>
     <string name="app_long_description">
         Du kannst ganz einfach jede App hinzufügen, damit du nie wieder zwischen zahlreichen Apps suchen musst, um eine bestimmte zu finden. Du kannst die Verknüpfungen auch nach deinen Wünschen umbenennen. Diese App ist kein richtiger Launcher, der deinen Homescreen ersetzt - nur ein Platz für Verknüpfungen deiner Lieblingsapps.
 
-        Beinhaltet keine Werbung oder unnötigen Berechtigungen. Sie ist komplett Open Source, verwendete Farben sind anpassbar.
-
+        Beinhaltet keine Werbung oder unnötige Berechtigungen. Sie ist komplett Open Source, alle verwendeten Farben sind anpassbar.
+        
         Diese App ist nur eine aus einer größeren Serie von schlichten Apps. Der Rest davon findet sich auf http://www.simplemobiletools.com
     </string>
 
