--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -20,7 +20,7 @@
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Un moyen simple de lancer vos applications préférées.</string>
     <string name="app_long_description">
-        Vous pouvez facilement ajouter n\'importe quel launcher d\'application à la liste, de telle sorte que vous n\'aurez plus jamais besoin de la chercher parmi les autres applications inutiles. Vous pouvez également renommer les launchers comme vous le souhaitez. Ce n\'est pas un vrai launcher d\'appli remplaçant votre écran d'accueil, juste un moyen de trouver facilement vos applications préférées.
+        Vous pouvez facilement ajouter n\'importe quel launcher d\'application à la liste, de telle sorte que vous n\'aurez plus jamais besoin de la chercher parmi les autres applications inutiles. Vous pouvez également renommer les launchers comme vous le souhaitez. Ce n\'est pas un vrai launcher d\'appli remplaçant votre écran d\'accueil, juste un moyen de trouver facilement vos applications préférées.
 
         Cette appli ne contient aucune publicité ou autorisation inutile. Elle est entièrement opensource, et propose une personnalisation des couleurs de l\'interface.
 
