adding Simple Contacts

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -8,6 +8,7 @@
     <string name="calculator">الحاسبة</string>
     <string name="calendar">التقويم</string>
     <string name="camera">الكاميرا</string>
+    <string name="contacts">Contacts</string>
     <string name="draw">رسم</string>
     <string name="file_manager">مدير الملفات</string>
     <string name="flashlight">الكشاف</string>
