--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,6 +8,7 @@
     <string name="calculator">Calculadora</string>
     <string name="calendar">Calendario</string>
     <string name="camera">Cámara</string>
+    <string name="contacts">Contacts</string>
     <string name="draw">Dibujo</string>
     <string name="file_manager">Administrador de archivos</string>
     <string name="flashlight">Linterna</string>
