--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -8,6 +8,7 @@
     <string name="calculator">Calculatrice</string>
     <string name="calendar">Calendrier</string>
     <string name="camera">Caméra</string>
+    <string name="contacts">Contacts</string>
     <string name="draw">Dessiner</string>
     <string name="file_manager">Gestionnaire de Fichiers</string>
     <string name="flashlight">Lampe de Poche</string>
