--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -8,6 +8,7 @@
     <string name="calculator">電卓</string>
     <string name="calendar">カレンダー</string>
     <string name="camera">カメラ</string>
+    <string name="contacts">Contacts</string>
     <string name="draw">ドロー</string>
     <string name="file_manager">ファイル マネージャー</string>
     <string name="flashlight">フラッシュライト</string>
