--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -8,6 +8,7 @@
     <string name="calculator">Kalkulator</string>
     <string name="calendar">Kalendarz</string>
     <string name="camera">Aparat</string>
+    <string name="contacts">Contacts</string>
     <string name="draw">Szkicownik</string>
     <string name="file_manager">Menedżer Plików</string>
     <string name="flashlight">Latarka</string>
