--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -8,6 +8,7 @@
     <string name="calculator">Calculadora</string>
     <string name="calendar">Calendário</string>
     <string name="camera">Câmara</string>
+    <string name="contacts">Contacts</string>
     <string name="draw">Desenho</string>
     <string name="file_manager">Gestor de ficheiros</string>
     <string name="flashlight">Lanterna</string>
