--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -8,6 +8,7 @@
     <string name="calculator">Kalkulačka</string>
     <string name="calendar">Kalendár</string>
     <string name="camera">Kamera</string>
+    <string name="contacts">Kontakty</string>
     <string name="draw">Kreslenie</string>
     <string name="file_manager">Správca súborov</string>
     <string name="flashlight">Batéria</string>
