--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="calculator">Calculator</string>
     <string name="calendar">Calendar</string>
     <string name="camera">Camera</string>
+    <string name="contacts">Contacts</string>
     <string name="draw">Draw</string>
     <string name="file_manager">File Manager</string>
     <string name="flashlight">Flashlight</string>
