--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Jednoduchý spúšťač aplikácií</string>
     <string name="app_launcher_name">Spúšťač aplikácií</string>
     <string name="enter_launcher_name">Prosím zadajte názov pre spúšťač</string>
-    <string name="delete_explanation">Toto iba odstráni spúšťačku z tejto mriežky, neodinštaluje to samotnú apku.</string>
+    <string name="remove_explanation">Toto iba odstráni spúšťačku z tejto mriežky, neodinštaluje to samotnú apku.</string>
 
     <!-- Apps -->
     <string name="calculator">Kalkulačka</string>
