--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Simple App Launcher</string>
     <string name="app_launcher_name">App Launcher</string>
     <string name="enter_launcher_name">Please enter a launcher name</string>
-    <string name="delete_explanation">This will just remove the launcher icon from this grid, not uninstall the actual app.</string>
+    <string name="remove_explanation">This will just remove the launcher icon from this grid, not uninstall the actual app.</string>
 
     <!-- Apps -->
     <string name="calculator">Calculator</string>
