--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">درج التطبيقات البسيط</string>
     <string name="app_launcher_name">مشغل التطبيق</string>
     <string name="enter_launcher_name">الرجاء ادراج اسم للإختصار</string>
-    <string name="delete_explanation">هذا سيقوم بحذف الايقونة فقط من الواجهة الحالية,ولن يقوم بإلغاء تثبيت حزمة التطبيق.</string>
+    <string name="remove_explanation">هذا سيقوم بحذف الايقونة فقط من الواجهة الحالية,ولن يقوم بإلغاء تثبيت حزمة التطبيق.</string>
 
     <!-- Apps -->
     <string name="calculator">الحاسبة</string>
