--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Simple App Launcher</string>
     <string name="app_launcher_name">App Launcher</string>
     <string name="enter_launcher_name">Veuillez entrer un nom de launcher</string>
-    <string name="delete_explanation">Cette action ne fera que supprimer l\'icône du launcher de cette liste et ne désinstallere pas l\'application.</string>
+    <string name="remove_explanation">Cette action ne fera que supprimer l\'icône du launcher de cette liste et ne désinstallere pas l\'application.</string>
 
     <!-- Apps -->
     <string name="calculator">Calculatrice</string>
