--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Simple App Launcher</string>
     <string name="app_launcher_name">Lançador de aplicações</string>
     <string name="enter_launcher_name">Por favor digite um nome para o lançador</string>
-    <string name="delete_explanation">Esta ação remove o ícone da grelha mas não desinstala a aplicação.</string>
+    <string name="remove_explanation">Esta ação remove o ícone da grelha mas não desinstala a aplicação.</string>
 
     <!-- Apps -->
     <string name="calculator">Calculadora</string>
