translate contacts app string

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -8,7 +8,7 @@
     <string name="calculator">Rechner</string>
     <string name="calendar">Kalender</string>
     <string name="camera">Kamera</string>
-    <string name="contacts">Contacts</string>
+    <string name="contacts">Kontakte</string>
     <string name="draw">Zeichenblock</string>
     <string name="file_manager">Dateimanager</string>
     <string name="flashlight">Taschenlampe</string>
