--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,7 +8,7 @@
     <string name="calculator">Калькулятор</string>
     <string name="calendar">Календарь</string>
     <string name="camera">Камера</string>
-    <string name="contacts">Contacts</string>
+    <string name="contacts">Контакты</string>
     <string name="draw">Рисунки</string>
     <string name="file_manager">Файловый менеджер</string>
     <string name="flashlight">Фонарик</string>
