edit music_player string DE

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -13,7 +13,7 @@
     <string name="file_manager">Dateimanager</string>
     <string name="flashlight">Taschenlampe</string>
     <string name="gallery">Galerie</string>
-    <string name="music_player">Musikplayer</string>
+    <string name="music_player">Musik-Player</string>
     <string name="notes">Notizblock</string>
     <string name="thank_you">Dankeschön</string>
 
