--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Simple App Launcher</string>
+    <string name="app_name">Jednostavan pokretač aplikacija</string>
     <string name="app_launcher_name">Pokretač aplikacija</string>
     <string name="enter_launcher_name">Unesite naziv pokretača</string>
     <string name="remove_explanation">To će ukloniti ikonu pokretača samo iz mreže, ali ne i deinstalirati aplikaciju.</string>
